--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-django<2.3
-django-filebrowser-no-grappelli
-django-tinymce
-django-tagging
-django-bootstrap4
+django>=3.2,<3.3
+djangorestframework
 pillow
-sorl-thumbnail
